--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@langchain/anthropic": "^0.3.16",
+    "@langchain/core": "^0.3.43",
+    "@langchain/openai": "^0.5.4",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-slot": "^1.1.2",
-    "ai": "^4.3.1",
+    "ai": "^2.2.31",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "langchain": "^0.3.20",
+    "langsmith": "^0.3.15",
     "lucide-react": "^0.487.0",
     "next": "15.2.4",
     "openai": "^4.91.1",
@@ -21,7 +26,8 @@
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
-    "tw-animate-css": "^1.2.5"
+    "tw-animate-css": "^1.2.5",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
