--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@langchain/openai": "^0.5.4",
     "@prisma/client": "^6.5.0",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.1.3",
     "@radix-ui/react-slot": "^1.0.2",
     "ai": "^2.2.31",
     "class-variance-authority": "^0.7.0",
