--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lucide-react": "^0.487.0",
     "next": "14.1.0",
     "next-auth": "^4.24.11",
+    "next-themes": "^0.4.6",
     "openai": "^4.91.1",
     "prisma": "^6.5.0",
     "react": "18.2.0",
@@ -37,6 +38,7 @@
     "rehype-prism-plus": "^2.0.1",
     "remark-gfm": "^4.0.1",
     "remark-math": "^6.0.0",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2",
