--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@langchain/openai": "^0.5.4",
     "@prisma/client": "^6.5.0",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.1.3",
     "@radix-ui/react-slot": "^1.0.2",
     "ai": "^2.2.31",
     "class-variance-authority": "^0.7.0",
@@ -27,6 +28,7 @@
     "lucide-react": "^0.487.0",
     "next": "14.1.0",
     "next-auth": "^4.24.11",
+    "next-themes": "^0.4.6",
     "openai": "^4.91.1",
     "prisma": "^6.5.0",
     "react": "18.2.0",
@@ -36,6 +38,7 @@
     "rehype-prism-plus": "^2.0.1",
     "remark-gfm": "^4.0.1",
     "remark-math": "^6.0.0",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2",
