--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ai": "^2.2.31",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^4.1.0",
     "langchain": "^0.3.20",
     "langsmith": "^0.3.15",
     "lucide-react": "^0.487.0",
