--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "langsmith": "^0.3.15",
     "lucide-react": "^0.487.0",
     "next": "14.1.0",
-    "next-auth": "latest",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "openai": "^4.91.1",
     "prisma": "^6.5.0",
